--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -36,6 +36,10 @@
 .img-volume {
     -fx-image: url("/media/img_volume.png");
 }
+.img-rate {
+    -fx-image: url("/media/img_rate.png");
+}
+
 .slider .track {
     -fx-background-color:rgba(255,0,0,0.3);
     -fx-background-insets: 1 0 -1 0, 0, 1;
