Complete globals save. Clean up code.

--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -152,7 +152,7 @@
                               <Font size="10.0" />
                            </font>
                         </Label>
-                        <Slider fx:id="sldVolume" blockIncrement="0.1" majorTickUnit="10" max="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="26.0" prefWidth="30.0" value="0.5">
+                        <Slider fx:id="sldVolume" blockIncrement="0.1" majorTickUnit="10" max="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="26.0" prefWidth="30.0" id="0.5">
                            <padding>
                               <Insets left="36.0" />
                            </padding>
@@ -190,7 +190,7 @@
                               <Font size="10.0" />
                            </font>
                         </Label>
-                        <Slider fx:id="sldRate" blockIncrement="0.1" majorTickUnit="10" max="2.0" min="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="26.0" prefWidth="30.0" value="1.0">
+                        <Slider fx:id="sldRate" blockIncrement="0.1" majorTickUnit="10" max="2.0" min="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="26.0" prefWidth="30.0" id="1.0">
                            <padding>
                               <Insets left="36.0" />
                            </padding>
