Fixes. Gui tweaks.

--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -93,3 +93,8 @@
 .btn-dark-blue Text {
     -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.9) , 1, 0.0 , 0 , 1 );
 }
+
+.toggle-button:selected {
+    -fx-effect: null;
+    -fx-text-fill: gray;
+}
