--- a/src/edu/unm/casaa/main/Coding.fxml
+++ b/src/edu/unm/casaa/main/Coding.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
@@ -29,11 +29,11 @@
             </TitledPane>
             <HBox alignment="CENTER_LEFT" prefHeight="30.0">
                <children>
-                  <Button fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" styleClass="btn-dark-blue" stylesheets="@Main.css" text="%btn.startCoding">
+                  <ToggleButton fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" styleClass="btn-dark-blue" stylesheets="@Main.css" text="%btn.startCoding">
                      <tooltip>
                         <Tooltip text="%btn.tt.startCoding" />
                      </tooltip>
-                  </Button>
+                  </ToggleButton>
                   <Label fx:id="lblCurMiscFile" text="">
                      <padding>
                         <Insets left="12.0" />
