--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -23,10 +23,9 @@
 }
 
 
-/* don't think this is working */
 .btnBarPane {
     -fx-alignment: center ;
-    -fx-background-color:rgba(21,27,31,0.3);
+    /*-fx-background-color:rgba(21,27,31,0.3);*/
 }
 
 
@@ -51,15 +50,22 @@
     -fx-background-radius: 2.1, 2.1, 1.1;
 }
 .gp-player {
-    -fx-background-color:rgba(21,27,31,0.5);
-}
-.ap-player {
+    /*-fx-background-color:rgba(21,27,31,0.5);*/
     -fx-border-color:rgba(101,101,101,1.0);
     -fx-border-insets: 12.0, 0.1, 0.1, 0.1;
     -fx-background-color:rgba(201,201,201,1.0);
     -fx-background-radius: 5,4,3,5;
     -fx-border-width: 0.5;
 }
+/*
+.ap-player {
+    -fx-border-color:rgba(101,101,101,1.0);
+    -fx-border-insets: 12.0, 0.1, 0.1, 0.1;
+    -fx-background-color:rgba(201,201,201,1.0);
+    -fx-background-radius: 5,4,3,5;
+    -fx-border-width: 0.5;
+}*/
+
 .pnVolume {
     -fx-border-color:rgba(101,101,101,1.0);
     -fx-border-insets: 0.1, 0.1, 0.1, 0.1;
