--- a/src/edu/unm/casaa/main/MISC_CODING.fxml
+++ b/src/edu/unm/casaa/main/MISC_CODING.fxml
@@ -17,9 +17,9 @@
          <children>
             <TitledPane fx:id="pnlTimeline" animated="false" collapsible="false" minHeight="90.0" minWidth="200.0" prefHeight="90.0" text="%pnl.title.timeline">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="timeline">
                      <children>
-                        <SwingNode fx:id="snTimeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <SwingNode fx:id="snTimeline" styleClass="timeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
               </content>
